objects/LiveChatTranscript.object
<CustomObject>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <description>SFDC1-7005 - The Case Number is populated via Apex trigger. This is to send the case number in Chat Transcript. The case is not directly accessible via merge field.</description>
        <label>Case Number</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LegacyID__c</fullName>
        <description>Contains Id of corresponding record in L-Markit</description>
        <externalId>true</externalId>
        <label>LegacyID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LiveChatLink__c</fullName>
        <formula>$Label.LiveAgentSiteURL+&quot;/LiveChatButton1?suppliedEmail=&quot; + SuppliedEmail__c + &quot;&amp;buttonOrigin=MCS&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Live Chat Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PKIDLCT__c</fullName>
        <description>SFDC1-2445 : Creating PK field for Data Migration Support</description>
        <displayFormat>LCT{000000}</displayFormat>
        <externalId>true</externalId>
        <label>PKID LCT</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>ProductGroup__c</fullName>
        <formula>Case.ProductGroup__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Product</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SendTranscript__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Transcript</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>StarttimeGMT__c</fullName>
        <formula>SUBSTITUTE(TEXT(DATETIMEVALUE(StartTime)), &apos;Z&apos;, &apos; GMT&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Starttime GMT</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SuppliedEmail__c</fullName>
        <label>Supplied Email</label>
        <type>Email</type>
    </fields>
    <listViews>
        <fullName>CSCustomerCare_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>CS | Customer Care - DO NOT USE</label>
        <queue>CSCustomerCare</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>FMCustomerCare_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>FM | Customer Care - DO NOT USE</label>
        <queue>FMCustomerCare</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IHSMarkitCustomerCare_LiveChatTranscript</fullName>
        <filterScope>Queue</filterScope>
        <label>IHS Markit Customer Care</label>
        <queue>IHSMarkitCustomerCare</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>